--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ li a:hover {
 <body >
 
       <ul>
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="https://felizcaballero.github.io/">Home</a></li>
   <li><a href="#news">Videos</a></li>
   <li><a href="https://felizcaballero.github.io/Terms-Text.html/">Glossary/Terms</a></li>
   <li><a href="https://felizcaballero.github.io/OrderForm.github.io/">Order Form</a></li>
