--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ li a:hover {
 
       <ul>
   <li><a class="active" href="https://felizcaballero.github.io/">Home</a></li>
-  <li><a href="#news">Videos</a></li>
+  <li><a href="https://felizcaballero.github.io/Multimedia.html/">Videos</a></li>
   <li><a href="https://felizcaballero.github.io/Terms-Text.html/">Glossary/Terms</a></li>
   <li><a href="https://felizcaballero.github.io/OrderForm.github.io/">Order Form</a></li>
 </ul>
