--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@ li a:hover {
       <p>
         To make it easier for you all I will be adding terms used in this personality type along with the abbreviations and what they mean.
       </p>
+  
+  <p>
+    Personality typing is a system of categorizing people according to their tendencies to think and act in particular ways.
+    Personality typing attempts to find the broadest, most important ways in which people are different, and make sense of these differences
+    by sorting people into meaningful groups.
+  </p>
     </body>
 </html>
