--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ li a:hover {
   <li><a class="active" href="https://felizcaballero.github.io/">Home</a></li>
   <li><a href="https://felizcaballero.github.io/Multimedia.html/">Videos</a></li>
   <li><a href="https://felizcaballero.github.io/Terms-Text.html/">Glossary/Terms</a></li>
+  <li><a href="https://felizcaballero.github.io/AboutUs.html/">About Us</a></li>
   <li><a href="https://felizcaballero.github.io/OrderForm.github.io/">Order Form</a></li>
 </ul>
 <h2>==========Glossary==========</h2>
