--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@ li a:hover {
       <p>
         To make it easier for you all I will be adding terms used in this personality type along with the abbreviations and what they mean.
       </p>
-  
+ 
+  <h3>Personality typing, who made it and why?</h3>
   <p>
-    Personality typing is a system of categorizing people according to their tendencies to think and act in particular ways.
-    Personality typing attempts to find the broadest, most important ways in which people are different, and make sense of these differences
-    by sorting people into meaningful groups.
+    The personality types described here were created by Isabel Briggs Myers and her mother, Katharine Briggs, in the 1960's. Their theories were based on the work
+    of psychologist Carl Jung, although they extended his ideas to create a more complete framework of personality typing. Myers and Briggs proposed that there were
+    four key dimensions that could be used to categorize people:
   </p>
     </body>
 </html>
