--- a/index.html
+++ b/index.html
@@ -61,5 +61,11 @@ li a:hover {
     of psychologist Carl Jung, although they extended his ideas to create a more complete framework of personality typing. Myers and Briggs proposed that there were
     four key dimensions that could be used to categorize people:
   </p>
+  <ul>
+  <li>Introversion vs. Extraversion</li>
+  <li>Sensing vs. Intuition</li>
+  <li>Thinking vs. Feeling</li>
+  <li>Judging vs. Perceiving</li>
+</ul>
     </body>
 </html>
