--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ li a:hover {
     four key dimensions that could be used to categorize people:
   </p>
   <ul>
-  <li>Introversion vs. Extraversion</li>
-  <li>Sensing vs. Intuition</li>
-  <li>Thinking vs. Feeling</li>
-  <li>Judging vs. Perceiving</li>
+  <li2>Introversion vs. Extraversion</li2>
+  <li2>Sensing vs. Intuition</li2>
+  <li2>Thinking vs. Feeling</li2>
+  <li2>Judging vs. Perceiving</li2>
 </ul>
     </body>
 </html>
