--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ li a:hover {
     of psychologist Carl Jung, although they extended his ideas to create a more complete framework of personality typing. Myers and Briggs proposed that there were
     four key dimensions that could be used to categorize people:
   </p>
-  <ul>
-  <li2>Introversion vs. Extraversion</li2>
-  <li2>Sensing vs. Intuition</li2>
-  <li2>Thinking vs. Feeling</li2>
-  <li2>Judging vs. Perceiving</li2>
+  <ul style="list-style-type:disc;">
+  <li>Introversion vs. Extraversion</li>
+  <li>Sensing vs. Intuition</li>
+  <li>Thinking vs. Feeling</li>
+  <li>Judging vs. Perceiving</li>
 </ul>
     </body>
 </html>
