--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Glossary</title>
   
   <style>
-ul {
+ul.a {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -40,7 +40,7 @@ li a:hover {
 </html >
 <body >
 
-      <ul>
+<ul class="a">
   <li><a class="active" href="https://felizcaballero.github.io/">Home</a></li>
   <li><a href="https://felizcaballero.github.io/Multimedia.html/">Videos</a></li>
   <li><a href="https://felizcaballero.github.io/Terms-Text.html/">Glossary/Terms</a></li>
