--- a/index.html
+++ b/index.html
@@ -64,5 +64,16 @@ li a:hover {
   <li>Thinking vs. Feeling</li>
   <li>Judging vs. Perceiving</li>
 </ul>
+  
+  <p>
+    Each of the four dimensions was described as a dichotomy, or an either/or choice between two styles of being. Myers and Briggs described this as a "preference"
+    and proposed that any individual should be able to identify a preferred style on each of the four dimensions. The sum of a person's four preferred styles becomes
+    their personality type.
+  </p>
+  
+  <p>
+    Myers and Briggs theorized that our preferences on each of the four dimensions would combine to create predictable patterns in thought and behavior, so that people
+    with the same four preferences would share many commonalities in the way they approach their lives, from the hobbies they choose to the work that might suit them.
+  </p>
     </body>
 </html>
