--- a/index.html
+++ b/index.html
@@ -75,5 +75,46 @@ li a:hover {
     Myers and Briggs theorized that our preferences on each of the four dimensions would combine to create predictable patterns in thought and behavior, so that people
     with the same four preferences would share many commonalities in the way they approach their lives, from the hobbies they choose to the work that might suit them.
   </p>
+
+  <h4>Why does each personality type have four letters</h4>
+  <p>
+   Each of the four letters in a personality type code stands for a preference in your style of thinking or behaving.
+  </p>
+  
+  <h5>I/E: INTROVERSION OR EXTRAVERSION</h5>
+  <p>
+   Each of the four letters in a personality type code stands for a preference in your style of thinking or behaving.
+  </p>
+  <ul>
+  <li>Introverts are energized by spending quiet time alone or with a small group. They tend to be more reserved and thoughtful.</li>
+  <li>Extraverts are energized by spending time with people and in busy, active surroundings. They tend to be more expressive and outspoken.</li>
+  </ul>
+  
+  <h6>S/N: SENSING OR INTUITION</h6>
+  <p>
+   The Sensing/Intuition dimension describes how an individual processes information.
+  </p>
+  <ul>
+  <li>Sensors focus on their five senses and are interested in information they can directly see, hear, feel, and so on. They tend to be hands-on learners and are often described as "practical."</li>
+  <li>Intuitives focus on a more abstract level of thinking; they are more interested in theories, patterns, and explanations. They are often more concerned with the future than the present and are often described as "creative."</li>
+  </ul>
+  
+  <h7>T/F: THINKING OR FEELING</h7>
+  <p>
+   The Thinking/Feeling dimension describes how people make decisions.
+  </p>
+  <ul>
+  <li>Thinkers tend to make decisions with their heads; they are interested in finding the most logical, reasonable choice.</li>
+  <li>Feelers tend to make decisions with their hearts; they are interested in how a decision will affect people, and whether it fits in with their values.</li>
+  </ul>
+  
+  <h8>J/P: JUDGING OR PERCEIVING</h8>
+  <p>
+   The Judging/Perceiving dimension describes how people approach structure in their lives
+  </p>
+  <ul>
+  <li>Judgers appreciate structure and order; they like things planned, and dislike last-minute changes.</li>
+  <li>Perceivers appreciate flexibility and spontaneity; they like to leave things open so they can change their minds.</li>
+  </ul>
     </body>
 </html>
