--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <head>
 <title>Glossary</title>
   
-  <style>
+<style>
+h1 {
+  text-align: center;
+}
+  
 ul.a {
   list-style-type: none;
   margin: 0;
@@ -45,7 +49,7 @@ li a:hover {
   <li><a href="https://felizcaballero.github.io/References.html/">References</a></li>
   <li><a href="https://felizcaballero.github.io/OrderForm.github.io/">Order Form</a></li>
 </ul>
-<h2>==========Glossary==========</h2>
+<h1>==========Glossary==========</h1>
 <p>Here's what you need to know</p>
       
       <p>
