--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <title>Glossary</title>
   
 <style>
+div {
+  background-color: lightgrey;
+  width: 1200px;
+  border: 15px solid green;
+  padding: 50px;
+  margin: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+  
 h1 {
   text-align: center;
 }
@@ -50,6 +60,7 @@ li a:hover {
   <li><a href="https://felizcaballero.github.io/OrderForm.github.io/">Order Form</a></li>
 </ul>
 <h1>==========Glossary==========</h1>
+<div>
 <p>Here's what you need to know</p>
       
       <p>
@@ -120,5 +131,6 @@ li a:hover {
   <li>Judgers appreciate structure and order; they like things planned, and dislike last-minute changes.</li>
   <li>Perceivers appreciate flexibility and spontaneity; they like to leave things open so they can change their minds.</li>
   </ul>
+  </div>
     </body>
 </html>
