--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ li a:hover {
 <body >
 
 <ul class="a">
-  <li><a class="active" href="https://felizcaballero.github.io/">Home</a></li>
+  <li><a href="https://felizcaballero.github.io/">Home</a></li>
   <li><a href="https://felizcaballero.github.io/Multimedia.html/">Videos</a></li>
-  <li><a href="https://felizcaballero.github.io/Terms-Text.html/">Glossary/Terms</a></li>
+  <li><a class="active" href="https://felizcaballero.github.io/Terms-Text.html/">Glossary/Terms</a></li>
   <li><a href="https://felizcaballero.github.io/AboutUs.html/">About Us</a></li>
   <li><a href="https://felizcaballero.github.io/References.html/">References</a></li>
   <li><a href="https://felizcaballero.github.io/OrderForm.github.io/">Order Form</a></li>
