--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <title>Glossary</title>
   
 <style>
+body {
+  background-image: url("libraries.jpeg");
+  background-repeat: no-repeat;
+  background-size: 1600px 2000px;
+  
 div {
   background-color: lightgrey;
   width: 1200px;
@@ -59,9 +64,9 @@ li a:hover {
   <li><a href="https://felizcaballero.github.io/References.html/">References</a></li>
   <li><a href="https://felizcaballero.github.io/OrderForm.github.io/">Order Form</a></li>
 </ul>
-<h1>==========Glossary==========</h1>
+
 <div>
-<p>Here's what you need to know</p>
+<h1>==========Glossary==========</h1>
       
       <p>
         To make it easier for you all I will be adding terms used in this personality type along with the abbreviations and what they mean.
